--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url('http://i.imgur.com/asUXvrk.jpg') center center no-repeat;
+  background: url('mtns.jpeg') center center no-repeat;
   background-size: cover;
   height: 100vh;
 }
